--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,13 @@
-h1{
-    font-size: large;
-    text-align: center;
+.child-logo
+{
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
+
+img{
+  align-content: center;
 }
 
 /* Specifies the size of the audio container */
