--- a/css/home.css
+++ b/css/home.css
@@ -12,6 +12,11 @@
   text-align: center;
 }
 
+img{
+  
+  resize: inherit;
+}
+
 /* Specifies the size of the audio container */
 audio {
     width: 115px;
